# api/openapi.yaml
@@ -229,9 +229,7 @@ components:
           format: int64
         name:
           type: string
-        swapwrap:
-          type: string
-          
+
     SwapPools:
       type: array
       items:
@@ -243,6 +241,12 @@ components:
         - name
         - token0
         - token1
+        - decimals0
+        - decimals1
+        - swapWrap        
+        - pool
+        - token0Address
+        - token1Address
         - reserve0
         - reserve1
         - price0
@@ -258,6 +262,21 @@ components:
           type: string
         token1:
           type: string
+        decimals0:
+          type: integer
+          format: int64
+        decimals1:
+          type: integer
+          format: int64
+        swapWrap:
+          type: string
+        pool:
+          type: string
+        token0Address:
+          type: string
+        token1Address:
+          type: string
+          
         reserve0:
           type: number
           format: float
@@ -283,15 +302,13 @@ components:
       required:
         - id
         - name
-        - loanwrap
       properties:
         id:
           type: integer
           format: int64
         name:
           type: string
-        loanwrap:
-          type: string          
+        
     LenderPools:
       type: array
       items:
@@ -302,6 +319,10 @@ components:
         - id
         - name
         - token
+        - decimals
+        - tokenAddress          
+        - lenderWrap
+        - lender           
         - reserve
         - fees
       properties:
@@ -312,6 +333,15 @@ components:
           type: string
         token:
           type: string
+        decimals:
+          type: integer
+          format: int64
+        tokenAddress:
+          type: string
+        lender:
+          type: string          
+        lenderWrap:
+          type: string            
         reserve:
           type: number
           format: float
@@ -324,25 +354,51 @@ components:
         - amount
         - token0
         - token1
+        - decimals0
+        - decimals1 
+        - token0Address
+        - token1Address        
         - exchangeSwapWrap
       properties:
         token0:
           type: string
         token1:
           type: string
+        decimals0:
+          type: integer
+          format: int64
+        decimals1:
+          type: integer
+          format: int64          
+        token0Address:
+          type: string
+        token1Address:
+          type: string
         amount:
           type: number
           format: float
-        exchangeSwapWrap:
+        swapWrap:
           type: string
-        swapPool:
+        pool:
           type: string
           
     MultiSwapExec:
       type: object
       properties:
-        loanwrap:
+        token:
           type: string
+        decimals:
+          type: integer
+          format: int64
+        tokenAddress:
+          type: string      
+        lenderwrap:
+          type: string
+        lender:
+          type: string
+        amount:
+          type: number
+          format: float          
         swaps:
           type: array
           items:
